started setting up window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,4 +56,4 @@ set(glad_dir ${CMAKE_SOURCE_DIR}/lib/glad)
 add_library(glad ${glad_dir}/src/glad.c)
 target_include_directories(glad PRIVATE ${glad_dir}/include)
 target_include_directories(${PROJECT_NAME} PRIVATE ${glad_dir}/include)
-target_link_libraries(${PROJECT_NAME} glad)
+target_link_libraries(${PROJECT_NAME} glad dl)
